--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build-lib": "vue-cli-service build --target lib --name FlowChart src/components/flowchart/index.js"
+    "build-lib": "vue-cli-service build --target lib --name FlowChart src/components/flowchart/index.js",
+    "postinstall": "yarn build",
+    "start": "node server.js"
   },
   "dependencies": {
     "d3": "^5.15.0",
+    "express": "^4.17.1",
     "vue": "^2.5.22"
   },
   "devDependencies": {
-    "prettier": "^2.0.5",
     "@vue/cli-plugin-babel": "^3.1.0",
     "@vue/cli-plugin-eslint": "^3.1.0",
     "@vue/cli-service": "^3.1.0",
@@ -31,6 +33,7 @@
     "cz-conventional-changelog": "^3.1.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "prettier": "^2.0.5",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
