--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/cli-plugin-babel": "^3.1.0",
     "@vue/cli-plugin-eslint": "^3.1.0",
     "@vue/cli-service": "^3.1.0",
+    "axios": "^0.20.0",
     "babel-eslint": "^10.0.1",
     "cz-conventional-changelog": "^3.1.0",
     "eslint": "^5.8.0",
